forcar rebuild com cors v3